sumo/tests/traci/VariableRetrieval/InductionLoop/errors/UnknownIL/testclient.prog
simstep 48 1
getvariable 160 16 xxx
simstep 49 1
